// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test QRCodeGenerator should behave correctly 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close ant-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                QR Code Generator
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <span
                class="ant-input-affix-wrapper input ant-input-textarea-affix-wrapper ant-input-textarea-show-count css-dev-only-do-not-override-hash ant-input-show-count"
                data-count="0 / 200"
              >
                <textarea
                  class="ant-input css-dev-only-do-not-override-hash"
                  placeholder="Input a link or text"
                  rows="5"
                />
                <span
                  class="ant-input-suffix"
                >
                  <span
                    class="ant-input-data-count"
                  >
                    0 / 200
                  </span>
                </span>
              </span>
              <div
                class="content"
              >
                <div
                  class="qrcode-container"
                >
                  <div
                    class="placeholder"
                  >
                    Preview
                  </div>
                </div>
                <div
                  class="settings"
                >
                  <div
                    class="label"
                  >
                    Error Tolerance
                     
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      role="img"
                      tabindex="-1"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-radio-group ant-radio-group-outline css-dev-only-do-not-override-hash"
                  >
                    <label
                      class="ant-radio-wrapper ant-radio-wrapper-checked css-dev-only-do-not-override-hash"
                    >
                      <span
                        class="ant-radio ant-wave-target ant-radio-checked"
                      >
                        <input
                          checked=""
                          class="ant-radio-input"
                          type="radio"
                          value="L"
                        />
                        <span
                          class="ant-radio-inner"
                        />
                      </span>
                      <span>
                        7%
                      </span>
                    </label>
                    <label
                      class="ant-radio-wrapper css-dev-only-do-not-override-hash"
                    >
                      <span
                        class="ant-radio ant-wave-target"
                      >
                        <input
                          class="ant-radio-input"
                          type="radio"
                          value="M"
                        />
                        <span
                          class="ant-radio-inner"
                        />
                      </span>
                      <span>
                        15%
                      </span>
                    </label>
                    <label
                      class="ant-radio-wrapper css-dev-only-do-not-override-hash"
                    >
                      <span
                        class="ant-radio ant-wave-target"
                      >
                        <input
                          class="ant-radio-input"
                          type="radio"
                          value="Q"
                        />
                        <span
                          class="ant-radio-inner"
                        />
                      </span>
                      <span>
                        20%
                      </span>
                    </label>
                    <label
                      class="ant-radio-wrapper css-dev-only-do-not-override-hash"
                    >
                      <span
                        class="ant-radio ant-wave-target"
                      >
                        <input
                          class="ant-radio-input"
                          type="radio"
                          value="H"
                        />
                        <span
                          class="ant-radio-inner"
                        />
                      </span>
                      <span>
                        30%
                      </span>
                    </label>
                  </div>
                  <label
                    class="ant-checkbox-wrapper checkbox css-dev-only-do-not-override-hash"
                  >
                    <span
                      class="ant-checkbox ant-wave-target css-dev-only-do-not-override-hash"
                    >
                      <input
                        class="ant-checkbox-input"
                        type="checkbox"
                      />
                      <span
                        class="ant-checkbox-inner"
                      />
                    </span>
                    <span>
                      Invert background color
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default"
                type="button"
              >
                <span>
                  Cancel
                </span>
                
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary"
                disabled=""
                type="button"
              >
                <span>
                  Confirm
                </span>
                
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test QRCodeGenerator should behave correctly 2`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 520px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close ant-modal-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                QR Code Generator
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <span
                class="ant-input-affix-wrapper input ant-input-textarea-affix-wrapper ant-input-textarea-show-count css-dev-only-do-not-override-hash ant-input-show-count"
                data-count="9 / 200"
              >
                <textarea
                  class="ant-input css-dev-only-do-not-override-hash"
                  placeholder="Input a link or text"
                  rows="5"
                >
                  some text
                </textarea>
                <span
                  class="ant-input-suffix"
                >
                  <span
                    class="ant-input-data-count"
                  >
                    9 / 200
                  </span>
                </span>
              </span>
              <div
                class="content"
              >
                <div
                  class="qrcode-container"
                >
                  <div
                    class="ant-qrcode qrcode css-dev-only-do-not-override-hash"
                    style="width: 1000px; height: 1000px; background-color: transparent;"
                  >
                    <canvas
                      height="974"
                      style="height: 974px; width: 974px;"
                      width="974"
                    />
                  </div>
                </div>
                <div
                  class="settings"
                >
                  <div
                    class="label"
                  >
                    Error Tolerance
                     
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      role="img"
                      tabindex="-1"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-radio-group ant-radio-group-outline css-dev-only-do-not-override-hash"
                  >
                    <label
                      class="ant-radio-wrapper ant-radio-wrapper-checked css-dev-only-do-not-override-hash"
                    >
                      <span
                        class="ant-radio ant-wave-target ant-radio-checked"
                      >
                        <input
                          checked=""
                          class="ant-radio-input"
                          type="radio"
                          value="L"
                        />
                        <span
                          class="ant-radio-inner"
                        />
                      </span>
                      <span>
                        7%
                      </span>
                    </label>
                    <label
                      class="ant-radio-wrapper css-dev-only-do-not-override-hash"
                    >
                      <span
                        class="ant-radio ant-wave-target"
                      >
                        <input
                          class="ant-radio-input"
                          type="radio"
                          value="M"
                        />
                        <span
                          class="ant-radio-inner"
                        />
                      </span>
                      <span>
                        15%
                      </span>
                    </label>
                    <label
                      class="ant-radio-wrapper css-dev-only-do-not-override-hash"
                    >
                      <span
                        class="ant-radio ant-wave-target"
                      >
                        <input
                          class="ant-radio-input"
                          type="radio"
                          value="Q"
                        />
                        <span
                          class="ant-radio-inner"
                        />
                      </span>
                      <span>
                        20%
                      </span>
                    </label>
                    <label
                      class="ant-radio-wrapper css-dev-only-do-not-override-hash"
                    >
                      <span
                        class="ant-radio ant-wave-target"
                      >
                        <input
                          class="ant-radio-input"
                          type="radio"
                          value="H"
                        />
                        <span
                          class="ant-radio-inner"
                        />
                      </span>
                      <span>
                        30%
                      </span>
                    </label>
                  </div>
                  <label
                    class="ant-checkbox-wrapper checkbox css-dev-only-do-not-override-hash"
                  >
                    <span
                      class="ant-checkbox ant-wave-target css-dev-only-do-not-override-hash"
                    >
                      <input
                        class="ant-checkbox-input"
                        type="checkbox"
                      />
                      <span
                        class="ant-checkbox-inner"
                      />
                    </span>
                    <span>
                      Invert background color
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-default"
                type="button"
              >
                <span>
                  Cancel
                </span>
                
              </button>
              <button
                class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary"
                type="button"
              >
                <span>
                  Confirm
                </span>
                
              </button>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
